# NuMaker-mbed-AWS-IoT-CSDK-OTA-example

./: CMakeLists.txt  README.md  mbed-client-for-aws.lib  mbed-os.lib  mbed_app.json  mbed_app_bg96.json
bootloader/MCUboot/: signing-keys.pem  signing_keys.c
configs/: aws_config.h  aws_credentials.c  aws_credentials.h
demo_ota_mqtt/: aws_credentials_provision.cpp  aws_credentials_provision.h  demo_config.h  ota_demo_core_mqtt.cpp
demo_ota_mqtt/COMPONENT_AWSIOT_PKCS11/: aws_credentials_provision_kvstore.cpp  aws_credentials_provision_kvstore.h
demo_ota_mqtt/COMPONENT_AWSIOT_PKCS11PSA/: aws_credentials_provision_psa.cpp  aws_credentials_provision_psa.h
pre-main/: mbed_main.cpp
pre-main/host-stdin/: dispatch_host_command.cpp  fetch_host_command.cpp  mem_stats.cpp  pump_host_command.cpp
pre-main/provision/: provision.cpp
pre-main/provision/COMPONENT_AWSIOT_PKCS11/: CMakeLists.txt  provision_kvstore.cpp
pre-main/provision/COMPONENT_AWSIOT_PKCS11PSA/: CMakeLists.txt  provision_psa.cpp  provision_psa_utils.cpp  provision_psa_utils.h
targets/TARGET_NUVOTON/: platform_entropy.cpp
targets/TARGET_NUVOTON/TARGET_NU_PFM_M2351_NPSA_NS/: NuMaker-mbed-TZ-secure-example.hex
